N°4478 Fix "Requested unknown parameter '' for row 0, column 0" when opening search on related object

--- a/datamodels/2.x/itop-portal-base/portal/src/views/bricks/object/mode_search_regular.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/src/views/bricks/object/mode_search_regular.html.twig
@@ -52,7 +52,7 @@
 				"sortable": false,
 				"title": "",
 				"type": "html",
-				"data": "",
+				"data": "id",
 				"render": function(data, type, row){ return '<span class="row_input"><input type="{{ (bMultipleSelect) ? 'checkbox' : 'radio' }}" name="{{ sTargetAttCode }}" /></span>'; }
 		});
 
