N°4283 - Fix textarea padding in some pages, also fix "Run query" parameters header

--- a/css/backoffice/components/_title.scss
+++ b/css/backoffice/components/_title.scss
@@ -55,7 +55,7 @@ $ibo-title--icon-background--size--must-zoomout: 66.67% !default;
 }
 
 .ibo-title--text {
-  @extend %ibo-font-ral-sembol-300;
+  @extend %ibo-font-ral-med-300;
 }
 
 .ibo-title--subtitle {
