N°3835 Upload file name security hardening

--- a/templates/base/components/input/file-select/layout.js.twig
+++ b/templates/base/components/input/file-select/layout.js.twig
@@ -3,6 +3,7 @@
 {% if oUIBlock.GetShowFilename() %}
     $('#{{ oUIBlock.GetId() }}').bind('change', function() {
         var fileName = $(this).val().replace(/^.*[\\\/]/, '');
+        fileName = $('<div/>').text(fileName).html();
         $('#{{ oUIBlock.GetId() }}-file-name').html(fileName);
     });
 {%  endif %}
