--- a/templates/base/layouts/dashboard/layout.html.twig
+++ b/templates/base/layouts/dashboard/layout.html.twig
@@ -2,10 +2,12 @@
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {# Dashboard Layout #}
 {% apply spaceless %}
-    <div class="ibo-dashboard--top-bar" data-role="ibo-dashboard--top-bar">
-        <div class="ibo-dashboard--top-bar-title" data-role="ibo-dashboard--top-bar-title">{{ oUIBlock.GetTitle() }}</div>
-        {{ render_block(oUIBlock.GetToolbar(), {aPage: aPage}) }}
-    </div>
+    {% if oUIBlock.HasTitle() or oUIBlock.HasToolbar() %}
+        <div class="ibo-dashboard--top-bar" data-role="ibo-dashboard--top-bar">
+            <div class="ibo-dashboard--top-bar-title" data-role="ibo-dashboard--top-bar-title">{{ oUIBlock.GetTitle() }}</div>
+            {{ render_block(oUIBlock.GetToolbar(), {aPage: aPage}) }}
+        </div>
+    {% endif %}
     <div class="ibo-dashboard--grid" data-role="ibo-dashboard--grid">
         {% for oSubBlock in oUIBlock.GetDashboardRows() %}
             {{ render_block(oSubBlock, {aPage: aPage}) }}
