N°3816 - Migrate module to new UIBlock system : Bulk Event Management

--- a/css/backoffice/blocks-integrations/_all.scss
+++ b/css/backoffice/blocks-integrations/_all.scss
@@ -10,6 +10,7 @@
 @import "display-block/all";
 @import "field/all";
 @import "fieldset/all";
+@import "form/all";
 @import "input/all";
 @import "panel/all";
 @import "pill/all";
