--- a/templates/base/layouts/content-block/layout.html.twig
+++ b/templates/base/layouts/content-block/layout.html.twig
@@ -3,7 +3,7 @@
 {# Content Block #}
 {% apply spaceless %}
 
-    {% set bHasDiv = (oUIBlock.GetAdditionalCSSClassesAsString() or oUIBlock.GetBlocksInheritanceCSSClassesAsString()  or oUIBlock.GetDataAttributes() or oUIBlock.IsHidden()) %}
+    {% set bHasDiv = (oUIBlock.GetAdditionalCSSClassesAsString() or  oUIBlock.GetDataAttributes() or oUIBlock.IsHidden() or oUIBlock.HasForcedDiv()) %}
 
     {% block iboContentBlockContainer %}
         {% if bHasDiv %}
