N°4481 - Fix lost code highlighting / formatting in attributes

--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -66,6 +66,9 @@ $ibo-field--enable-bulk--checkbox--margin-left: $ibo-spacing-300 !default;
         word-break: break-word;
         white-space: inherit;
       }
+      & pre {
+        white-space: break-spaces;
+      }
     }
   }
 }
