Correctly set selectize sub-input text color

--- a/css/backoffice/components/input/_input-select.scss
+++ b/css/backoffice/components/input/_input-select.scss
@@ -61,7 +61,8 @@ $ibo-input-select--autocomplete-item-image--border: 1px solid $ibo-color-grey-60
 
     input {
       border-width: 0px;
-      border-color: white;
+      color: inherit;
+      border-color: $ibo-color-white-100;
       padding-left: $ibo-input-select--padding-x;
     }
 
