N°4481 - Fix n:n link addition when there are more than 3+ ext. keys on the link class

--- a/templates/application/links/indirect/block-indirect-links-edit/layout.js.twig
+++ b/templates/application/links/indirect/block-indirect-links-edit/layout.js.twig
@@ -10,7 +10,8 @@ oWidget{{ oUIBlock.iInputId }} = new LinksWidget(
      {{ oUIBlock.bDuplicates }},
      {{ oUIBlock.oWizHelper }},
     '{{ oUIBlock.sExtKeyToRemote }}',
-     {{ oUIBlock.bJSDoSearch }}
+     {{ oUIBlock.bJSDoSearch }},
+     {{ oUIBlock.iMaxAddedId }}
 );
 oWidget{{ oUIBlock.iInputId }}.Init();
 {% endapply %}
