N°3816 - Migrate module to new UIBlock system : Bulk Event Management - add count of selected items

--- a/css/backoffice/components/_datatable.scss
+++ b/css/backoffice/components/_datatable.scss
@@ -121,3 +121,7 @@ $ibo-fieldsorter--selected--background-color: $ibo-color-blue-200 !default;
     }
   }
 }
+
+.ibo-datatable--selected-count{
+  padding-right: 0.2em;
+}
