--- a/templates/base/components/input/richtext/layout.html.twig
+++ b/templates/base/components/input/richtext/layout.html.twig
@@ -1,4 +1,4 @@
 {% extends "base/components/input/layout.html.twig" %}
 {% block iboInput %}
-	<textarea id="{{ oUIBlock.GetId() }}" class="htmlEditor ibo-input-richtext-placeholder" name="{{ oUIBlock.GetName() }}" ></textarea>
+	<textarea id="{{ oUIBlock.GetId() }}" class="htmlEditor ibo-input-richtext-placeholder" name="{{ oUIBlock.GetName() }}">{{ oUIBlock.GetValue() }}</textarea>
 {% endblock %}
