--- a/datamodels/2.x/itop-portal-base/portal/templates/bricks/browse/mode_mosaic.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/templates/bricks/browse/mode_mosaic.html.twig
@@ -215,7 +215,7 @@
 				itemElem.append(aElem);
 				
 				// Building tooltip for the node
-				if( (item.tooltip !== undefined) && ($(item.tooltip).text() !== '') )
+				if( (item.tooltip !== undefined) && (item.tooltip !== '') )
 				{
 					aElem.attr('title', item.tooltip).attr('data-toggle', 'tooltip').tooltip({html: true, trigger: 'hover', placement: 'top'});
 				}
