--- a/datamodels/2.x/itop-portal-base/portal/templates/bricks/browse/mode_list.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/templates/bricks/browse/mode_list.html.twig
@@ -81,7 +81,7 @@
 							// For the same reason, tooltip widget is created in "drawCallback" instead of here.
 							if( (data.tooltip !== undefined) && ($(data.tooltip).text() !== ''))
 							{
-								cellElem.html( $('<span></span>').attr('title', data.tooltip).attr('data-toggle', 'tooltip').html(data.name).prop('outerHTML') );
+								cellElem.html( $('<span></span>').attr('data-tooltip-content', data.tooltip).attr('data-tooltip-html-enabled', true).html(data.name).prop('outerHTML') );
 							}
 							else
 							{
@@ -267,9 +267,7 @@
 				"columns": getColumnsDefinition(),
 				"order": [],
 				"drawCallback": function(settings){
-					// Tooltip has to be created here, as the render callback only returns a string, not an object.
-					$(this).find('[data-toggle="tooltip"]').tooltip({container: 'body', html: true, trigger: 'hover', placement: 'right'});	// container option is necessary when in a table
-					// Hiding pagination if only one page
+                   // Hiding pagination if only one page
 					if($(this).closest('.dataTables_wrapper').find('.dataTables_paginate:last .paginate_button:not(.previous):not(.next)').length < 2)
 					{
 						$(this).closest('.dataTables_wrapper').find('.dataTables_paginate, .dataTables_info').hide();
