--- a/datamodels/2.x/itop-portal-base/portal/templates/bricks/object/layout.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/templates/bricks/object/layout.html.twig
@@ -10,9 +10,10 @@
 			<h2>
 				{% if form.title_clipboard_text is defined %}
 					<i class="url-to-clipboard url-to-clipboard-icon fas fa-link fa-xs" 
-					   data-clipboard-text="{{ form.title_clipboard_text }}" 
-					   data-toggle="tooltip" 
-					   title="{{ 'Brick:Portal:Object:Copy:Tooltip' | dict_s }}"
+					   data-clipboard-text="{{ form.title_clipboard_text }}"
+                       data-toggle="tooltip"
+                       data-tooltip-content="{{ 'Brick:Portal:Object:Copy:Tooltip' | dict_s }}"
+                       data-tooltip-html-enabled="true"
 					   data-copied-title="{{ 'Brick:Portal:Object:Copy:CopiedTooltip' | dict_s }}"
 					   data-copied-icon="fas fa-check">
 					</i>
