--- a/datamodels/2.x/itop-portal-base/portal/templates/bricks/object/modal.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/templates/bricks/object/modal.html.twig
@@ -6,8 +6,9 @@
 	{% if form.title_clipboard_text is defined %}
 		<i class="url-to-clipboard url-to-clipboard-icon fas fa-link fa-xs" 
 		   data-clipboard-text="{{ form.title_clipboard_text }}"
-		   data-toggle="tooltip" 
-		   title="{{ 'Brick:Portal:Object:Copy:Tooltip' | dict_s }}" 
+          data-toggle="tooltip"
+		   data-tooltip-content="{{ 'Brick:Portal:Object:Copy:Tooltip' | dict_s }}"
+           data-tooltip-html-enabled="true"
 		   data-copied-title="{{ 'Brick:Portal:Object:Copy:CopiedTooltip' | dict_s }}"
 		   data-copied-icon="fas fa-check">
 		</i>
