--- a/templates/base/components/dashlet/dashlet-badge.html.twig
+++ b/templates/base/components/dashlet/dashlet-badge.html.twig
@@ -3,7 +3,7 @@
 {% apply spaceless %}
     <div class="ibo-dashlet-badge--body{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %}" id="{{ oUIBlock.GetId() }}"
          data-role="ibo-dashlet-badge--body"
-         title="{{ oUIBlock.GetClassLabel() }}">
+         data-tooltip-content="{{ oUIBlock.GetClassLabel() }}">
         <div class="ibo-dashlet-badge--icon-container">
             {# Mind the empty "alt" attribute https://www.w3.org/WAI/tutorials/images/decorative/ #}
             <img class="ibo-dashlet-badge--icon" src="{{ oUIBlock.GetClassIconUrl() }}" alt="">
