N°4667 - Remove call to tooltip function

--- a/datamodels/2.x/itop-portal-base/portal/templates/bricks/manage/layout-table.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/templates/bricks/manage/layout-table.html.twig
@@ -33,7 +33,7 @@
                                id="btn_export_excel_for_{{ aAreaData.sId }}"
                                data-toggle="modal" data-target="#modal-for-all">
                                 <span class="fas fa-download fa-lg" style="float: right;"
-                                   data-tooltip-html-enabled="true" data-tooltip-content="{{ 'ExcelExporter:ExportMenu'|dict_s }}"></span>
+                                  data-tooltip-content="{{ 'ExcelExporter:ExportMenu'|dict_s }}"></span>
                             </a>
                         {% endif %}
                     </div>
