N°4696 Improve spacing between a fieldset and a field

--- a/css/backoffice/blocks-integrations/fieldset/_all.scss
+++ b/css/backoffice/blocks-integrations/fieldset/_all.scss
@@ -3,5 +3,6 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
+@import "fieldset-with-field";
 @import "fieldset-with-fieldset";
 @import "fieldset-with-multicolumn";
