--- a/css/backoffice/components/_title.scss
+++ b/css/backoffice/components/_title.scss
@@ -8,6 +8,8 @@ $ibo-title--padding-y: $ibo-spacing-400 !default;
 $ibo-title--padding-x: $ibo-spacing-0 !default;
 
 $ibo-title--icon--size: 90px !default;
+$ibo-title--icon--size-2: 80px !default;
+$ibo-title--icon--size-3: 70px !default;
 
 $ibo-title--icon-background--size--must-contain: contain !default;
 $ibo-title--icon-background--size--must-cover: cover !default;
@@ -28,6 +30,18 @@ $ibo-title--icon-background--size--must-zoomout: 66.67% !default;
   min-width: $ibo-title--icon--size;
   min-height: $ibo-title--icon--size;
   overflow: hidden;
+}
+.ibo-title--icon > .ibo-title--icon-level-2{
+  width: $ibo-title--icon--size-2;
+  height: $ibo-title--icon--size-2;
+  min-width: $ibo-title--icon--size-2;
+  min-height: $ibo-title--icon--size-2;
+}
+.ibo-title--icon > .ibo-title--icon-level-3{
+  width: $ibo-title--icon--size-3;
+  height: $ibo-title--icon--size-3;
+  min-width: $ibo-title--icon--size-3;
+  min-height: $ibo-title--icon--size-3;
 }
 
 .ibo-title--icon-background {
