--- a/templates/base/components/field/layout.html.twig
+++ b/templates/base/components/field/layout.html.twig
@@ -15,7 +15,7 @@
      data-attribute-flag-must-change="{{ oUIBlock.IsMustChange()|var_export }}"
      data-attribute-flag-must-prompt="{{ oUIBlock.IsMustPrompt()|var_export }}"
      data-attribute-flag-slave="{{ oUIBlock.IsSlave()|var_export }}"
-     data-value-raw="{{ aParams.value_raw }}"
+     data-value-raw="{{ oUIBlock.GetValueRaw() }}"
         {% if oUIBlock.GetDataAttributes() %}
             {% for sName, sValue in oUIBlock.GetDataAttributes() %}
                 data-{{ sName }}="{{ sValue }}"
