--- a/css/backoffice/blocks-integrations/input/_input-with-label.scss
+++ b/css/backoffice/blocks-integrations/input/_input-with-label.scss
@@ -13,14 +13,16 @@ input + label, label + input, label > input {
   margin-left: $ibo-input--spacing-left--with-label;
 }
 
-label.ibo-has-description {
-  &::after {
-    content: $ibo-field--label--description--content;
-    padding-left: $ibo-field--label--description--padding-left;
-    vertical-align: top;
+.ibo-input-with-label--label {
+  &.ibo-has-description {
+    &::after {
+      content: $ibo-field--label--description--content;
+      padding-left: $ibo-field--label--description--padding-left;
+      vertical-align: top;
 
-    cursor: pointer;
-    color: $ibo-field--label--description--color;
-    @extend %ibo-font-ral-bol-50;
+      cursor: pointer;
+      color: $ibo-field--label--description--color;
+      @extend %ibo-font-ral-bol-50;
+    }
   }
 }
