--- a/templates/base/components/button/buttonjs.html.twig
+++ b/templates/base/components/button/buttonjs.html.twig
@@ -22,6 +22,7 @@
             aria-label="{{ sAriaLabel }}"
         {% endif %}
 >
+    <span class="ibo-button--loading-icon fas fa-spinner fa-pulse"></span>
     {% if oUIBlock.GetIconClass() is not empty %}
         <span class="ibo-button--icon {{ oUIBlock.GetIconClass() }}"></span>
     {% endif %}
