--- a/templates/base/components/button/layout.html.twig
+++ b/templates/base/components/button/layout.html.twig
@@ -20,6 +20,7 @@
         {% endif %}
 
 >
+    <span class="ibo-button--loading-icon fas fa-spinner fa-pulse"></span>
     {% if oUIBlock.GetIconClass() is not empty %}
         <span class="ibo-button--icon {{ oUIBlock.GetIconClass() }}"></span>
     {% endif %}
