--- a/templates/pages/backoffice/itopwebpage/layout.html.twig
+++ b/templates/pages/backoffice/itopwebpage/layout.html.twig
@@ -3,8 +3,8 @@
 {% extends "pages/backoffice/nicewebpage/layout.html.twig" %}
 {% block iboPageBodyHtml %}
 		{{ render_block(aLayouts.oNavigationMenu, {aPage: aPage}) }}
-		<div id="ibo-page-container" data-role="ibo-page-container">
-			<div id="ibo-top-container" data-role="ibo-top-container">
+		<div id="ibo-page-container" class="ibo-page-container" data-role="ibo-page-container">
+			<div id="ibo-top-container" class="ibo-top-container" data-role="ibo-top-container">
 				{{ include('pages/backoffice/extension-blocks/banner.html.twig') }}
 				{{ render_block(aLayouts.oTopBar, {aPage: aPage}) }}
 			</div>
@@ -15,7 +15,7 @@
 			<div style="display:none" title="ex2" id="ex2">Please wait...</div>
 			<div style="display:none" title="dialog" id="ModalDlg"></div>
 			<div style="display:none" id="ajax_content"></div>
-			<div class="ibo-is-hidden" id="ibo-user-disconnected-dialog">{{ 'UI:DisconnectedDlgMessage'|dict_s }}</div>
+			<div id="ibo-user-disconnected-dialog" class="ibo-user-disconnected-dialog ibo-is-hidden">{{ 'UI:DisconnectedDlgMessage'|dict_s }}</div>
 		</div>
 {% endblock %}
 
@@ -36,5 +36,5 @@
 {% endblock %}
 
 {% block iboCapturedOutput %}
-    <div id="ibo-raw-output" class="ibo-is-hidden" title="Debug Output">{{ aPage.sCapturedOutput|raw }}</div>
+    <div id="ibo-raw-output" class="ibo-raw-output ibo-is-hidden" title="Debug Output">{{ aPage.sCapturedOutput|raw }}</div>
 {% endblock %}
