--- a/datamodels/2.x/itop-portal-base/portal/templates/bricks/browse/mode_tree.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/templates/bricks/browse/mode_tree.html.twig
@@ -204,7 +204,7 @@
 				liElem.append(aElem);
 				
 				// Building tooltip for the node
-				if( (item.tooltip !== undefined) && ($(item.tooltip).text() !== '') )
+				if( (item.tooltip !== undefined) && ($('<div>'+item.tooltip+'</div>').text() !== '') )
 				{
 					nameElem.attr('data-tooltip-content', item.tooltip).attr('data-tooltip-html-enabled', true);
                     CombodoTooltip.InitTooltipFromMarkup(nameElem);
