N°4460 Fix run-query highlight color on error for Full Moon and Darkmoon

--- a/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
+++ b/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
@@ -247,3 +247,5 @@ $ibo-vendors-c3--legend--fill: $ibo-color-white-200;
 $ibo-vendors-c3--legend--background-color: $ibo-color-white-100;
 $ibo-vendors-c3--legend-item--fill: $ibo-color-grey-100;
 $ibo-vendors-c3--axis--fill: $ibo-color-grey-200;
+
+$ibo-run-query--highlight--background-color: $ibo-color-primary-700;
