--- a/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
+++ b/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
@@ -15,6 +15,10 @@
                     {{ 'iTopUpdate:UI:CanCoreUpdate:Loading'|dict_s }}
                     {% UISpinner Standard {} %}
                 {% EndUIContentBlock %}
+                {%UICollapsibleSection Standard {'sId':'header-requirements-details','sTitle':'UI:Details+'|dict_s, 'IsCollapsible':true, 'IsClosable':false,'AddCSSClass':'ibo-is-hidden'} %}
+                    {% UIContentBlock Standard {'aContainerClasses':['ibo-update-core-header-requirements'], 'sId':'can-core-update-details'} %}
+                    {% EndUIContentBlock %}
+                {% EndUICollapsibleSection %}
             {% EndUIAlert %}
 
             {% UIField Standard {'sLabel':'iTopUpdate:UI:CurrentVersion'|dict_s} %}
@@ -56,7 +60,11 @@
                     {% EndUIContentBlock %}
                 {% EndUIAlert %}
 
-                {% UIFileSelect Standard {sName: 'file', sId: 'file'} %}
+            {% UIAlert ForInformation {'sId':'check-in-progress', 'IsHidden':false} %}
+                {{ 'iTopUpdate:UI:CheckInProgress'|dict_s }}
+            {% EndUIAlert %}
+
+                {% UIFileSelect Standard {sName: 'file', sId: 'file','AddCSSClass':'ibo-is-hidden'} %}
 
                 {% UIAlert ForWarning {'sId':'dobackup-warning', 'IsHidden':true} %}
                     {{ 'iTopUpdate:UI:DoBackup:Warning'|dict_s }}
