N°4642 - Core Update : limit the usage of this function to minor version or disable the functionality ?

--- a/css/backoffice/blocks-integrations/collapsible-section/_all.scss
+++ b/css/backoffice/blocks-integrations/collapsible-section/_all.scss
@@ -5,3 +5,4 @@
 
 @import "collapsible-section-with-blocks";
 @import "collapsible-section-within-caselog-list";
+@import "collapsible-section-within-alert";
