--- a/css/backoffice/blocks-integrations/collapsible-section/_collapsible-section-within-alert.scss
+++ b/css/backoffice/blocks-integrations/collapsible-section/_collapsible-section-within-alert.scss
@@ -1,29 +1,26 @@
 /*
- * @copyright   Copyright (C) 2010-2021 Combodo SARL
+ * @copyright   Copyright (C) 2010-2022 Combodo SARL
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
 /* SCSS variables */
-$ibo-alert-in-collapsible-section--body--background-color: transparentize($ibo-color-grey-100,0.5) !default;
-$ibo-alert-in-collapsible-section--body--padding: $ibo-spacing-300 !default;
-$ibo-alert-in-collapsible-section--body--color: $ibo-color-grey-900 !default;
+$ibo-collapsible-section-within-alert--body--padding: $ibo-spacing-300 !default;
+$ibo-collapsible-section-within-alert--body--text-color: $ibo-color-grey-900 !default;
 
-/* - caselog display in ormcaselog */
 .ibo-alert--body {
   .ibo-collapsible-section {
-    margin: 0;
-    min-width: 22em;
-
-    .ibo-collapsible-section--header .ibo-collapsible-section--title {
-      @extend %ibo-font-size-100;
+    .ibo-collapsible-section--header .ibo-collapsible-section--title,
+    .ibo-collapsible-section--body {
+      @extend %ibo-font-size-150;
     }
 
     .ibo-collapsible-section--body {
-      @extend %ibo-font-size-100;
-      color: $ibo-alert-in-collapsible-section--body--color;
-      padding: $ibo-alert-in-collapsible-section--body--padding;
-      background-color: $ibo-alert-in-collapsible-section--body--background-color;
+      color: $ibo-collapsible-section-within-alert--body--text-color;
+      padding: $ibo-collapsible-section-within-alert--body--padding;
     }
+  }
+  > * + .ibo-collapsible-section {
+    margin-top: 8px;
   }
 }
   
